--- a/.github/workflows/build-artifact.yml
+++ b/.github/workflows/build-artifact.yml
@@ -1,7 +1,7 @@
 name: create etcd binaries
 on:
   schedule:
-    cron: "0 0 1 * *"
+  - cron: "0 0 1 * *"
 jobs:
   build:
     name: build artifacts
